Fixed CSS to wrap text in code blocks

--- a/css/syntax.css
+++ b/css/syntax.css
@@ -4,6 +4,8 @@
 div.highlight {
   padding: 5px;
   font-size: 15px;
+  white-space: pre-wrap;
+  word-break: break-all;
 }
 
 .highlight .cm {
